syntax = "proto3";

option csharp_namespace = "GrpcCurrencyConverterService.Protos";


package currencyConverter;

service Converter {
  rpc Converter (ConvertRequest) returns (ConvertReply);
}

message ConvertRequest {
  double amount = 1;
  string from = 2;
  string to = 3;
}

message ConvertReply{
  double result = 1;
}